Sonar Fixes (#2240)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>